--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,7 @@
 /tests/viridentitytest
 /tests/virkeycodetest
 /tests/virkeyfiletest
+/tests/virkmodtest
 /tests/virlockspacetest
 /tests/virlogtest
 /tests/virnet*test
