tests: Add tests for scsi utils
This creates the basic unit tests for the scsi utils.

Signed-off-by: Osier Yang <jyang@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,7 @@
 /tests/virnet*test
 /tests/virpcitest
 /tests/virportallocatortest
+/tests/virscsitest
 /tests/virshtest
 /tests/virstoragetest
 /tests/virstringtest
