virnetdevbandwidthtest: Link with libxml2
I've received a notice over IRC that on some systems, the
virnetdevbandwidthtest is not linked with libxml:

  /usr/bin/ld: virnetdevbandwidthtest.o: undefined reference to symbol 'xmlStrEqual@@LIBXML2_2.4.30'
  /usr/lib/x86_64-linux-gnu/libxml2.so.2: error adding symbols: DSO missing from command line

Trivial way avoiding this is to add LIBXML_LIBS to
virnetdevbandwidthtest_LDADD.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -658,7 +658,7 @@ commandhelper_LDFLAGS = -static
 
 virnetdevbandwidthtest_SOURCES = \
 	virnetdevbandwidthtest.c testutils.h testutils.c
-virnetdevbandwidthtest_LDADD = $(LDADDS)
+virnetdevbandwidthtest_LDADD = $(LDADDS) $(LIBXML_LIBS)
 
 if WITH_LIBVIRTD
 libvirtdconftest_SOURCES = \
