Write up the project governance process
The project has historically operated as a meritocratic
consensus based community. Formally document what has
always been an unwritten assumption amongst the community
participants. Also include an explicit code of conduct
to preempt any potential, but unlikely, future problems.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/docs/index.html.in
+++ b/docs/index.html.in
@@ -30,6 +30,11 @@
       <li>
         A <a href="/qpid/">QMF agent</a> for the AMQP/QPid messaging system
       </li>
+      <li>
+        A <a href="governance.html">technical meritocracy</a>, in which
+        participants gain influence over a project through recognition
+        of their contributions.
+      </li>
     </ul>
 
     <h2>libvirt supports:</h2>
