build: Fix 'make rpm' in VPATH with wireshark
Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/tools/wireshark/Makefile.am
+++ b/tools/wireshark/Makefile.am
@@ -20,3 +20,4 @@
 if WITH_WIRESHARK_DISSECTOR
 SUBDIRS              = src
 endif WITH_WIRESHARK_DISSECTOR
+EXTRA_DIST           = util/genxdrstub.pl util/make-dissector-reg
