--- a/tools/wireshark/src/Makefile.am
+++ b/tools/wireshark/src/Makefile.am
@@ -21,7 +21,7 @@
 INCLUDES = -I$(top_srcdir)
 
 ws_plugin_LTLIBRARIES     = libvirt.la
-libvirt_la_SOURCES        = packet-libvirt.c plugin.c
+libvirt_la_SOURCES        = packet-libvirt.h packet-libvirt.c plugin.c
 libvirt_la_CPPFLAGS       = $(WS_DISSECTOR_CPPFLAGS)
 libvirt_la_LDFLAGS        = -avoid-version -module
 
