Fix minor typo in governance doc
While at it, also relinquish active commit rights:
[x years between commits] is probably a poster child example of inactivity :)

Signed-off-by: Eric Blake <eblake@redhat.com>

--- a/docs/governance.html.in
+++ b/docs/governance.html.in
@@ -24,7 +24,7 @@
       project community taken as a whole, all members (whether users,
       contributors or committers) are expected to abide by the project's
       code of conduct. At a high level the code can be summarized as
-      <em>"be excellant to each other"</em>. Expanding on this:
+      <em>"be excellent to each other"</em>. Expanding on this:
     </p>
 
     <ul>
