LXC from native: migrate fstab and lxc.mount.entry
Tmpfs relative size and default 50% size values aren't supported as
we have no idea of the available memory at the conversion time.

--- a/tests/lxcconf2xmldata/lxcconf2xml-fstab.config
+++ b/tests/lxcconf2xmldata/lxcconf2xml-fstab.config
@@ -8,10 +8,7 @@ lxc.network.hwaddr = 02:00:15:8f:05:c1
 lxc.network.name = eth0
 
 #remove next line if host DNS configuration should not be available to container
-lxc.mount.entry = proc proc proc nodev,noexec,nosuid 0 0
-lxc.mount.entry = sysfs sys sysfs defaults  0 0
-lxc.mount.entry = tmpfs run tmpfs size=8m,mode=0755,nodev,nosuid 0 0
-lxc.mount.entry = /etc/resolv.conf etc/resolv.conf none bind,ro 0 0
+lxc.mount = /var/lib/lxc/migrate_test/fstab
 lxc.rootfs = /var/lib/lxc/migrate_test/rootfs
 lxc.utsname = migrate_test
 lxc.autodev=1
