--- a/tests/lxcconf2xmldata/lxcconf2xml-blkiotune.config
+++ b/tests/lxcconf2xmldata/lxcconf2xml-blkiotune.config
@@ -5,3 +5,7 @@ lxc.autodev=1
 lxc.cgroup.blkio.weight = 500
 lxc.cgroup.blkio.device_weight = 8:16	1000
 lxc.cgroup.blkio.device_weight = 8:0    300
+lxc.cgroup.blkio.throttle.read_bps_device = 8:16 1234
+lxc.cgroup.blkio.throttle.write_bps_device = 8:16 5678
+lxc.cgroup.blkio.throttle.read_iops_device = 8:16 4321
+lxc.cgroup.blkio.throttle.write_iops_device = 8:16 8765
