--- a/src/qemu/qemu.conf
+++ b/src/qemu/qemu.conf
@@ -58,7 +58,7 @@
 #vnc_tls_x509_verify = 1
 
 
-# The default VNC password. Only 8 letters are significant for
+# The default VNC password. Only 8 bytes are significant for
 # VNC passwords. This parameter is only used if the per-domain
 # XML config does not already provide a password. To allow
 # access without passwords, leave this commented out. An empty
@@ -180,7 +180,7 @@
 
 # VNC WebSocket port policies, same rules apply as with remote display
 # ports.  VNC WebSockets use similar display <-> port mappings, with
-# the exception being that ports starts from 5700 instead of 5900.
+# the exception being that ports start from 5700 instead of 5900.
 #
 #remote_websocket_port_min = 5700
 #remote_websocket_port_max = 65535
@@ -333,7 +333,7 @@
 # disable guest hugepage backing.
 #
 # NB, within this mount point, guests will create memory backing files
-# in a location of  $MOUNTPOINT/libvirt/qemu
+# in a location of $MOUNTPOINT/libvirt/qemu
 #
 #hugetlbfs_mount = "/dev/hugepages"
 
@@ -421,14 +421,14 @@
 # Keepalive protocol:
 # This allows qemu driver to detect broken connections to remote
 # libvirtd during peer-to-peer migration.  A keepalive message is
-# sent to the deamon after keepalive_interval seconds of inactivity
-# to check if the deamon is still responding; keepalive_count is a
+# sent to the daemon after keepalive_interval seconds of inactivity
+# to check if the daemon is still responding; keepalive_count is a
 # maximum number of keepalive messages that are allowed to be sent
-# to the deamon without getting any response before the connection
+# to the daemon without getting any response before the connection
 # is considered broken.  In other words, the connection is
 # automatically closed approximately after
 # keepalive_interval * (keepalive_count + 1) seconds since the last
-# message received from the deamon.  If keepalive_interval is set to
+# message received from the daemon.  If keepalive_interval is set to
 # -1, qemu driver will not send keepalive requests during
 # peer-to-peer migration; however, the remote libvirtd can still
 # send them and source libvirtd will send responses.  When
