vircapstest: Introduce virCapabilitiesGetCpusForNodemask test
This test creates a Fake NUMA topology with non-sequential cell ids
to check if libvirt properly handles the same

Signed-off-by: Shivaprasad G Bhat <sbhat@linux.vnet.ibm.com>
Signed-off-by: Pradipta Kr. Banerjee <bpradip@in.ibm.com>

--- a/.gitignore
+++ b/.gitignore
@@ -193,6 +193,7 @@
 /tests/virauthconfigtest
 /tests/virbitmaptest
 /tests/virbuftest
+/tests/vircapstest
 /tests/vircgrouptest
 /tests/virdbustest
 /tests/virdrivermoduletest
