AppArmor: Fix the place where the template should be installed
The security driver expects /etc/apparmor.d/libvirt/TEMPLATE but we
installed it to /etc/apparmor.d/libvirtd/TEMPLATE. Move the template to
the expected place since that code was here long before.

--- a/examples/apparmor/Makefile.am
+++ b/examples/apparmor/Makefile.am
@@ -32,7 +32,7 @@ abstractions_DATA = \
 	libvirt-qemu \
 	$(NULL)
 
-templatesdir = $(apparmordir)/libvirtd
+templatesdir = $(apparmordir)/libvirt
 templates_DATA = \
 	TEMPLATE \
 	$(NULL)
