tests: cleanup object-locking test
When ran, cil is throwing out some errors and warnings for obsolete
'or' unused variables and wrong module name (it should not contain a
hyphen; hence the rename).

Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -149,9 +149,9 @@
 /tests/*test
 !/tests/*schematest
 !/tests/virt-aa-helper-test
-/tests/object-locking
-/tests/object-locking-files.txt
-/tests/object-locking.cm[ix]
+/tests/objectlocking
+/tests/objectlocking-files.txt
+/tests/objectlocking.cm[ix]
 /tests/reconnect
 /tests/ssh
 /tests/test_conf
