--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -2117,6 +2117,9 @@ fi
 %endif
 
 %changelog
+* Tue Feb 18 2014 Cole Robinson <crobinso@redhat.com> - 1.1.3.4-1
+- Maintenance release 1.1.3.4
+
 * Thu Jan 16 2014 Cole Robinson <crobinso@redhat.com> - 1.1.3.3-1
 - Maintenance release 1.1.3.3
 
