--- a/daemon/libvirtd.service.in
+++ b/daemon/libvirtd.service.in
@@ -13,6 +13,7 @@ Documentation=man:libvirtd(8)
 Documentation=http://libvirt.org
 
 [Service]
+Type=notify
 EnvironmentFile=-/etc/sysconfig/libvirtd
 ExecStart=@sbindir@/libvirtd $LIBVIRTD_ARGS
 ExecReload=/bin/kill -HUP $MAINPID
