Include error domain and code in log messages from errors
When a virError is raised, pass the error domain and code
onto the systemd journald using metadata fields.

This allows error messages to be queried by code eg

  $ journalctl LIBVIRT_CODE=43

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/docs/logging.html.in
+++ b/docs/logging.html.in
@@ -173,6 +173,10 @@
       <dd>The line number of the file emitting the log record</dd>
       <dt><code>CODE_FUNC</code></dt>
       <dd>The name of the function emitting the log record</dd>
+      <dt><code>LIBVIRT_DOMAIN</code></dt>
+      <dd>The libvirt error domain (values from virErrorDomain enum), if LIBVIRT_SOURCE="error"</dd>
+      <dt><code>LIBVIRT_CODE</code></dt>
+      <dd>The libvirt error code (values from virErrorCode enum), if LIBVIRT_SOURCE="error"</dd>
     </dl>
 
     <h2>
